# Chili

./: .gitignore  CMakeLists.txt
CMake/: CompilerWarnings.cmake  FindTensorFlowCompile.py  FindTensorFlowLib.py  apes-config.cmake.in  apes-config.in  chili-config.cmake.in  chili-config.in
include/Channel/: Channel.hh  ChannelNode.hh  ChannelUtils.hh  Integrand.cuh  Integrand.hh  Mapper.cuh  Mapper.hh  MultiChannel.cuh  MultiChannel.hh
include/Cuda/: Interface.cuh  Manager.h
include/Integrator/: AdaptiveMap.cuh  AdaptiveMap.hh  Integrator.hh  Random.hh  Statistics.cuh  Statistics.hh  Vegas.cuh  Vegas.hh
include/Interfaces/: Python.hh  Tensorflow.hh  nanobind.hh
include/Model/: Model.hh
include/Tools/: ChannelElements.hh  Channel_Elements.hh  Cuts.hh  Factory.hh  FourVector.hh  JetCluster.hh  MPI.hh  Poincare.hh  ThreeVector.hh  Utilities.hh
src/: CMakeLists.txt  example.cc  example.cu  example2.cc  example_mpi.cc  example_tf.cc
src/Channel/: CMakeLists.txt  Channel.cc  ChannelNode.cc  Integrand.cu  MultiChannel.cc
src/Cuda/: CMakeLists.txt  Interface.cu
src/Integrator/: AdaptiveMap.cc  AdaptiveMap.cu  CMakeLists.txt  Vegas.cc  Vegas.cu
src/Interfaces/: CMakeLists.txt  Tensorflow.cc  nanobind.cc
src/Tools/: CMakeLists.txt  ChannelElements.cc  Channel_Elements.cc  FourVector.cc  JetCluster.cc  MPI.cc  Poincare.cc  ThreeVector.cc
